# automated_robot_planning

./: CMakeLists.txt  Dockerfile  GAZEBO_TROUBLESHOOTING.md  README.md  README_DOCKER.md  clear_gazebo_world.py  entrypoint.sh  fastdds_no_shm.xml  frames_2025-06-18_15.53.51.gv  package.xml  requirements.txt  setup.py  test_scan_topic.py
automated_robot_planning/: CMakeLists.txt  QosBridge.py  dubins.py  dubins_curve.py  dubins_node.py  obstacle_detector.py  package.xml  path_planner.py  position_manager.py  robot_controller.py  tf_config.yaml  tf_monitor.py
automated_robot_planning/automated_robot_planning/: obstacle_detector.py  path_planner.py  robot_controller.py  shelfino_robot.py
automated_robot_planning/launch/: evacuation.launch.py
install/: local_setup.sh  setup.sh
install/automated_robot_planning/share/automated_robot_planning/: package.bash  package.zsh
launch/: evacuation.launch.py  evader.launch.py  victims.launch.py
log/: latest_build
map_pkg/: CMakeLists.txt  package.xml
map_pkg/config/: map_config.yaml
map_pkg/include/map_pkg/: obstacle_struct.hpp  spawn_model.hpp  utilities.hpp
map_pkg/launch/: map_env.launch.py  spawn_map.launch.py
map_pkg/launch/mapscripts/: geo_utility.py  spawn_borders.py  spawn_gates.py  spawn_obstacles.py  spawn_utility_.py
map_pkg/models/box/: model.config  model.sdf
map_pkg/models/cylinder/: model.config  model.sdf
map_pkg/models/gate/: model.config  model.sdf
map_pkg/models/victim/: model.config  model.sdf
map_pkg/scripts/: create_map_pgm.py  generate_config_file.py  geo_utility.py  run_dos2unix.py
map_pkg/src/: send_borders.cpp  send_gates.cpp  send_obstacles.cpp  send_victims.cpp  spawn_model.cpp  utilities.cpp
map_pkg/test/: utilities_test.cpp
obstacles_msgs/: CMakeLists.txt  package.xml
obstacles_msgs/msg/: ObstacleArrayMsg.msg  ObstacleMsg.msg
shelfino_description/: CMakeLists.txt  package.xml
shelfino_description/config/: bridge.yaml
shelfino_description/launch/: rsp.launch.py  rviz.launch.py
shelfino_description/models/: shelfino_v1.xacro
shelfino_description/models/shelfino_v1/: gazebo_classic_controls.xacro  lidar.xacro  materials.xacro  model.config  realsense_t265.xacro  shelfino_body.xacro  wheels.xacro  xmas_hat.xacro
shelfino_description/models/xmas_hat/: model.config  model.sdf
shelfino_description/rviz/: shelfino.rviz
shelfino_gazebo/: CMakeLists.txt  package.xml
shelfino_gazebo/launch/: shelfino.launch.py  single_robot_test.launch.py  test_simple.launch.py
shelfino_gazebo/src/: destroy_shelfino.cpp
shelfino_gazebo/worlds/: empty.world  hexagon_world_fixed.sdf  test_simple.world
shelfino_gazebo/worlds/hexagon_world/: model-1_4.sdf  model.config  model.sdf
shelfino_gazebo/worlds/rectangle_world/: model.config  model.sdf
shelfino_navigation/: CMakeLists.txt  package.xml
shelfino_navigation/config/: shelfino.yaml
shelfino_navigation/launch/: shelfino_nav.launch.py
shelfino_navigation/maps/: demo.yaml  hexagon.pgm  hexagon.yaml  lab.yaml  lab1.yaml  test_obstacles.yaml  ufficio.yaml  ufficio1.yaml  ufficio2.yaml  ufficio3.yaml
shelfino_navigation/rviz/: shelfino2_slam.rviz  shelfino_nav.rviz  shelfino_nav_backup.rviz
shelfino_node/: setup.py
shelfino_node/include/: shelfino_hw_publisher.hpp
shelfino_node/launch/: bringup.launch.py
shelfino_node/src/: changing.cpp  shelfino_hw_publisher.cpp
