<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shelfino_description</name>
  <version>1.0.0</version>
  <description>Package to send the model of the robot</description>
  <maintainer email="placido.falqueto@unitn.it">Placido</maintainer>
  <maintainer email="enrico.saccon@unitn.it">Enrico</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for Xacro and robot state publishing -->
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>

  <!-- Dependencies for Gazebo Harmonic (Ignition Gazebo) -->
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Update gazebo_ros to ros_gz for Gazebo Harmonic -->
    <ros_gz gazebo_model_path="${prefix}/models"/>
    <ros_gz gazebo_model_path="${prefix}/.."/>
  </export>
</package>