<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shelfino_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eecs@todo.todo">eecs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for Xacro and ROS 2 -->
  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <!-- Dependencies for Gazebo Harmonic (Ignition Gazebo) -->
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>

  <!-- Dependencies for Gazebo messages -->
  <depend>ros_gz_interfaces</depend>


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Update gazebo_ros to ros_gz for Gazebo Harmonic -->
    <ros_gz gazebo_model_path="${prefix}/worlds"/>
  </export>
</package>
